--- a/src/styles/components/_radio.scss
+++ b/src/styles/components/_radio.scss
@@ -8,7 +8,8 @@
   margin-bottom: f.rem(10);
   font-size: f.rem(20);
   padding-left: f.rem(44);
-  width: 260px;
+  width: fit-content; 
+  position: relative;
 
   input {
     display: none;
@@ -20,6 +21,7 @@
     gap: f.rem(12);
     font-family: v.$font-Almarai;
     font-weight: 400;
+    white-space: nowrap;
 
     &::before {
       content: '';
@@ -29,20 +31,39 @@
       border-radius: 50%;
       display: inline-block;
       transition: all 0.2s;
-    }
-   
-    &:hover{
-      font-weight: bold;
+      flex-shrink: 0;
     }
   }
 
   input:checked + .radio-text {
-    font-weight: 700;
+    font-weight: bold;
+
+    &::before {
+      background-color: #303131;
+      border-color: #303131;
+      box-shadow: inset 0 0 0 6px white;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: calc(100% + f.rem(15)); 
+      top: 50%;
+      transform: translateY(-50%);
+      width: f.rem(40); 
+      height: f.rem(2); 
+      background-color: v.$color-primary;
+    }
   }
 
-  input:checked + .radio-text::before {
-    background-color: #303131;
-    border-color: #303131;
-    box-shadow: inset 0 0 0 6px white; 
+  &:has(input:checked)::after {
+    content: '';
+    position: absolute;
+    left: calc(100% + f.rem(55)); 
+    top: 50%;
+    width: f.rem(12);
+    height: f.rem(12);
+    background-color: v.$color-primary;
+    transform: translateY(-50%) rotate(45deg); 
   }
 }
