--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,6 @@
 html, body {
     height: 100%;
     width: 100%;
-    max-width: 1440px;
     background-color: white;
 }
 
