--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -6,8 +6,8 @@
   background-color: white;
   min-height: 100vh;
   padding: f.rem(80) f.rem(120);
-  display: flex;
-  flex-direction: column;
+  @include m.flex-center;
+  flex-direction: column;  
   color: v.$color-text-dark;
 
   &__container {
@@ -15,18 +15,19 @@
     grid-template-columns: 1.2fr 1fr;
     gap: f.rem(100);
     align-items: stretch;
+    max-width: f.rem(1200);
   }
 
   &__right-col {
     display: flex;
     flex-direction: column;
-    padding-top: f.rem(150);
+    padding-top: f.rem(120);
   }
 
     &__title {
       font-family: v.$font-RedRose;
       font-size: f.rem(72);
-      margin-bottom: f.rem(60);
+      margin-bottom: f.rem(80);
       position: relative;
 
     &::after {
@@ -38,25 +39,28 @@
       height: f.rem(5);
       background-color: v.$color-primary;
     }
+
     &::before {
-      content: '◆';
+      content: '';
       position: absolute;
       bottom: f.rem(-30);
       left: f.rem(-24);
-      color: v.$color-primary;
-      font-size: f.rem(40);
+      width: f.rem(22);
+      height: f.rem(22);
+      background-color: v.$color-primary;
+      transform: translateY(-50%) rotate(45deg); 
     }
   }
 
   &__preview {
+    padding-bottom: f.rem(30);
     border-radius: f.rem(24);
     display: flex;
     justify-content: flex-end;
     min-height: f.rem(400);
     
     img {
-      max-width: f.rem(400);
-      height: auto;
+      max-width: f.rem(600);
     }
   }
 
